tests/src/frontend/typechecking/invalid/positional_default_constructor_base.sk
base class B(x: String) {} // error, default before nondefault
class C(y: String = "World!") extends B {}
